syntax = "proto3";

import "google/protobuf/timestamp.proto";

package coreService;

option go_package = "./;coreService";

message InvoiceHandler {
  string ID = 1;
  string Title = 2;
  string Description = 3;
  string Version = 4;
}

message InvoiceHandlersListReq {}

message InvoiceHandlersListRes {
  repeated InvoiceHandler Handlers = 1;
}

message Product {
  string ProductID = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
  google.protobuf.Timestamp CreatedAt = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
}

message UpdateProductReq {
  string ProductID = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
}

message UpdateProductRes {
  string ProductID = 1;
}

message DeleteProductByIdReq {
  string ProductID = 1;
}

message DeleteProductByIdRes {}